// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditCard component should display credit card form 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            to="/app/settings/billing/"
          >
            Billing & Usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Add payment method
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer container"
    fluid={true}
    tag="div"
  >
    <div
      className="form"
    >
      <Alert
        className="mb-3"
      >
        You will be charged for the current period of your plan once you add your Credit Card
      </Alert>
      <h3
        className="heading-section-semibold"
      >
        Payment information
      </h3>
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <InputField
          className="mb16"
          id="name"
          isRequired={true}
          label="Name on the card"
          onChange={[Function]}
          placeholder="Marie Curie"
          value=""
        />
        <div
          className="row mb32"
        >
          <InputField
            className="inputRow"
            id="number"
            isRequired={true}
            label="Card number"
            onChange={[Function]}
            placeholder="4657 7894 1234 7895"
            value=""
          />
          <InputField
            className="inputRow"
            id="expDate"
            isRequired={true}
            label="Expiry date"
            onChange={[Function]}
            placeholder="05 / 21"
            value=""
          />
          <InputField
            className="inputRow"
            id="cvc"
            isRequired={true}
            label="CVC"
            onChange={[Function]}
            placeholder="693"
            value=""
          />
        </div>
        <h3
          className="heading-section-semibold"
        >
          Billing address
        </h3>
        <BillingAddressInputs
          onChange={[Function]}
          value={Object {}}
        />
        <FormGroup
          color="danger"
          tag="div"
        >
          <Errors />
        </FormGroup>
        <ForwardRef
          isDisabled={true}
          isLoading={false}
          type="submit"
        >
          Add payment method
           
           and pay $1000
        </ForwardRef>
      </Form>
    </div>
    <BillingPlanCard
      className="plan"
      footer={false}
      isCurrentPlan={true}
      plan={Object {}}
      renderBody={[Function]}
    />
  </Container>
</div>
`;

exports[`CreditCard component should display loader while fetching stripe SDK 1`] = `
<Loader
  inline={false}
  minHeight="500px"
  size="40px"
/>
`;

exports[`CreditCard component should not render the billing address form when a credit card has been added and the contact information is valid 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            to="/app/settings/billing/"
          >
            Billing & Usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Add payment method
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer container"
    fluid={true}
    tag="div"
  >
    <div
      className="form"
    >
      <Alert
        className="mb-3"
      >
        You will be charged for the current period of your plan once you add your Credit Card
      </Alert>
      <h3
        className="heading-section-semibold"
      >
        Payment information
      </h3>
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <InputField
          className="mb16"
          id="name"
          isRequired={true}
          label="Name on the card"
          onChange={[Function]}
          placeholder="Marie Curie"
          value=""
        />
        <div
          className="row mb32"
        >
          <InputField
            className="inputRow"
            id="number"
            isRequired={true}
            label="Card number"
            onChange={[Function]}
            placeholder="4657 7894 1234 7895"
            value=""
          />
          <InputField
            className="inputRow"
            id="expDate"
            isRequired={true}
            label="Expiry date"
            onChange={[Function]}
            placeholder="05 / 21"
            value=""
          />
          <InputField
            className="inputRow"
            id="cvc"
            isRequired={true}
            label="CVC"
            onChange={[Function]}
            placeholder="693"
            value=""
          />
        </div>
        <FormGroup
          color="danger"
          tag="div"
        >
          <Errors />
        </FormGroup>
        <ForwardRef
          isDisabled={true}
          isLoading={false}
          type="submit"
        >
          Add payment method
           
        </ForwardRef>
      </Form>
    </div>
  </Container>
</div>
`;

exports[`CreditCard component should render billing plan card with automation footer when current plan is not active and has automation add-on 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            to="/app/settings/billing/"
          >
            Billing & Usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Add payment method
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer container"
    fluid={true}
    tag="div"
  >
    <div
      className="form"
    >
      <Alert
        className="mb-3"
      >
        You will be charged for the current period of your plan once you add your Credit Card
      </Alert>
      <h3
        className="heading-section-semibold"
      >
        Payment information
      </h3>
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <InputField
          className="mb16"
          id="name"
          isRequired={true}
          label="Name on the card"
          onChange={[Function]}
          placeholder="Marie Curie"
          value=""
        />
        <div
          className="row mb32"
        >
          <InputField
            className="inputRow"
            id="number"
            isRequired={true}
            label="Card number"
            onChange={[Function]}
            placeholder="4657 7894 1234 7895"
            value=""
          />
          <InputField
            className="inputRow"
            id="expDate"
            isRequired={true}
            label="Expiry date"
            onChange={[Function]}
            placeholder="05 / 21"
            value=""
          />
          <InputField
            className="inputRow"
            id="cvc"
            isRequired={true}
            label="CVC"
            onChange={[Function]}
            placeholder="693"
            value=""
          />
        </div>
        <h3
          className="heading-section-semibold"
        >
          Billing address
        </h3>
        <BillingAddressInputs
          onChange={[Function]}
          value={Object {}}
        />
        <FormGroup
          color="danger"
          tag="div"
        >
          <Errors />
        </FormGroup>
        <ForwardRef
          isDisabled={true}
          isLoading={false}
          type="submit"
        >
          Add payment method
           
           and pay $1000
        </ForwardRef>
      </Form>
    </div>
    <BillingPlanCard
      className="plan"
      footer={
        <React.Fragment>
          <AutomationAmount
            addOnAmount={200}
            editable={false}
            plan={
              Object {
                "amount": 800,
                "automation_addon_included": true,
                "currencySign": "$",
                "name": "basic",
              }
            }
          />
          <TotalAmount
            addOnAmount={200}
            isEditable={false}
            plan={
              Object {
                "amount": 800,
                "automation_addon_included": true,
                "currencySign": "$",
                "name": "basic",
              }
            }
          />
        </React.Fragment>
      }
      isCurrentPlan={true}
      plan={
        Object {
          "amount": 800,
          "automation_addon_included": true,
          "currencySign": "$",
          "name": "basic",
        }
      }
      renderBody={[Function]}
    />
  </Container>
</div>
`;

exports[`CreditCard component should render nothing if loaded, but no current subscription is set 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            to="/app/settings/billing/"
          >
            Billing & Usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Add payment method
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer container"
    fluid={true}
    tag="div"
  >
    <div
      className="form"
    >
      <Alert
        className="mb-3"
      >
        You will be charged for the current period of your plan once you add your Credit Card
      </Alert>
      <h3
        className="heading-section-semibold"
      >
        Payment information
      </h3>
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <InputField
          className="mb16"
          id="name"
          isRequired={true}
          label="Name on the card"
          onChange={[Function]}
          placeholder="Marie Curie"
          value=""
        />
        <div
          className="row mb32"
        >
          <InputField
            className="inputRow"
            id="number"
            isRequired={true}
            label="Card number"
            onChange={[Function]}
            placeholder="4657 7894 1234 7895"
            value=""
          />
          <InputField
            className="inputRow"
            id="expDate"
            isRequired={true}
            label="Expiry date"
            onChange={[Function]}
            placeholder="05 / 21"
            value=""
          />
          <InputField
            className="inputRow"
            id="cvc"
            isRequired={true}
            label="CVC"
            onChange={[Function]}
            placeholder="693"
            value=""
          />
        </div>
        <h3
          className="heading-section-semibold"
        >
          Billing address
        </h3>
        <BillingAddressInputs
          onChange={[Function]}
          value={Object {}}
        />
        <FormGroup
          color="danger"
          tag="div"
        >
          <Errors />
        </FormGroup>
        <ForwardRef
          isDisabled={true}
          isLoading={false}
          type="submit"
        >
          Add payment method
           
        </ForwardRef>
      </Form>
    </div>
  </Container>
</div>
`;

exports[`CreditCard component should render the billing address form when account is missing contact information 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            to="/app/settings/billing/"
          >
            Billing & Usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Add payment method
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer container"
    fluid={true}
    tag="div"
  >
    <div
      className="form"
    >
      <Alert
        className="mb-3"
      >
        You will be charged for the current period of your plan once you add your Credit Card
      </Alert>
      <h3
        className="heading-section-semibold"
      >
        Payment information
      </h3>
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <InputField
          className="mb16"
          id="name"
          isRequired={true}
          label="Name on the card"
          onChange={[Function]}
          placeholder="Marie Curie"
          value=""
        />
        <div
          className="row mb32"
        >
          <InputField
            className="inputRow"
            id="number"
            isRequired={true}
            label="Card number"
            onChange={[Function]}
            placeholder="4657 7894 1234 7895"
            value=""
          />
          <InputField
            className="inputRow"
            id="expDate"
            isRequired={true}
            label="Expiry date"
            onChange={[Function]}
            placeholder="05 / 21"
            value=""
          />
          <InputField
            className="inputRow"
            id="cvc"
            isRequired={true}
            label="CVC"
            onChange={[Function]}
            placeholder="693"
            value=""
          />
        </div>
        <h3
          className="heading-section-semibold"
        >
          Billing address
        </h3>
        <BillingAddressInputs
          onChange={[Function]}
          value={Object {}}
        />
        <FormGroup
          color="danger"
          tag="div"
        >
          <Errors />
        </FormGroup>
        <ForwardRef
          isDisabled={true}
          isLoading={false}
          type="submit"
        >
          Add payment method
           
        </ForwardRef>
      </Form>
    </div>
  </Container>
</div>
`;
